# SongBloom

./: .gitignore  CLAUDE.md  README.md  infer.py  pyproject.toml  requirements.txt  train_japanese.py  train_vq_codebook.py
.github/workflows/: ci.yml
SongBloom/g2p/cn_zh_g2p/: __init__.py  japanese.py
SongBloom/models/songbloom/: songbloom_pl.py
SongBloom/models/vae_frontend/: autoencoders.py
SongBloom/training/: __init__.py  combine_datasets.py  dataset.py  lora.py  make_dummy_dataset.py  prepare_jacappella.py  prepare_japanese_singing.py  prepare_kiritan.py  sketch.py  split_jsonl.py  train_vq.py
docs/: lyric_format.md  status_report_ja.md  training_architecture.md  training_code.md  training_data_format.md
example/: test_ja.jsonl
tests/: test_dataset_external_sketch.py  test_lora.py  test_make_dummy_dataset.py  test_prepare_jacappella.py  test_sketch_extractor.py  test_split_helper.py  test_split_jsonl.py  test_train_japanese_args.py  test_train_vq.py  test_training_dataset.py
